cmake_minimum_required(VERSION 3.13)
set ( PICO_SDK_PATH "C:\\Principal\\Pico\\outils\\pico-sdk")
include(pico_sdk_import.cmake)
project(projet2 C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
pico_sdk_init()
add_executable(projet2
chap2.s
)
target_link_libraries(projet2 pico_stdlib hardware_hazard3)
pico_enable_stdio_usb(projet2 1)
pico_enable_stdio_uart(projet2 0)
pico_add_extra_outputs(projet2)
target_include_directories(projet2 PRIVATE ${CMAKE_CURRENT_LIST_DIR} )